Woohoo Added Soung to Note click events

--- a/soundscribe_frontend/index.html
+++ b/soundscribe_frontend/index.html
@@ -17,6 +17,18 @@
     </div>
 
     <div id="make-a-melody-div" class="creation-container ui inverted segment">
+      <audio id="C-Note" src="piano_notes_mp3_folder/middle_c.mp3"></audio>
+      <audio id="D-Note" src="piano_notes_mp3_folder/middle_d.mp3"></audio>
+      <audio id="E-Note" src="piano_notes_mp3_folder/middle_e.mp3"></audio>
+      <audio id="F-Note" src="piano_notes_mp3_folder/middle_f.mp3"></audio>
+      <audio id="G-Note" src="piano_notes_mp3_folder/middle_g.mp3"></audio>
+      <audio id="A-Note" src="piano_notes_mp3_folder/middle_a.mp3"></audio>
+      <audio id="B-Note" src="piano_notes_mp3_folder/middle_b.mp3"></audio>
+
+
+
+
+
       <h4 class="ui horizontal inverted divider">
         Make A Melody
       </h4>
