updated backend files to latest ruby version

--- a/soundscribe_frontend/index.html
+++ b/soundscribe_frontend/index.html
@@ -8,7 +8,19 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.8/semantic.min.js"></script>
     <link rel="stylesheet" href="style.css"/>
   </head>
-  <body style="background-color: #778899;color: #FFFFFF;">
+  <body style="background-color: #778899; color: #FFFFFF;">
+
+
+    <div class="ui center aligned inverted segment">
+      <h2 class="ui icon header">
+        <i class="music icon"></i>
+        <div class="content">
+          Welcome to Sound-Scribe!
+          <h4 class="ui teal header ">Your source for remembering that tune from that one time</div>
+        </div>
+      </h2>
+    </div>
+
     <h4 class="ui horizontal inverted divider">
       Existing Melodies
     </h4>
